--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "@oada/formats": "oada/formats",
     "@types/mkdirp": "^1.0.0",
     "@types/node": "^13.11.0",
     "json-schema-to-typescript": "^8.2.0",
