--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "private": false,
   "dependencies": {
     "@oada/formats": "oada/formats",
+    "typescript": "^3.8.3"
+  },
+  "devDependencies": {
     "@types/mkdirp": "^1.0.0",
     "@types/node": "^13.11.0",
     "json-schema-to-typescript": "^8.2.0",
-    "mkdirp": "^1.0.4",
-    "typescript": "^3.8.3"
+    "mkdirp": "^1.0.4"
   }
 }
