--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/mkdirp": "^1.0.0",
     "@types/node": "^13.11.0",
     "json-schema-to-typescript": "^8.2.0",
-    "mkdirp": "^1.0.4"
+    "mkdirp": "^1.0.4",
+    "ts-node": "^8.9.0"
   }
 }
