--- a/package.json
+++ b/package.json
@@ -6,7 +6,16 @@
   "scripts": {
     "build": "ts-node compile.ts",
     "prestart": "npm run build",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "pretest": "npm run build",
+    "test": "mocha"
+  },
+  "mocha": {
+    "spec": "**/*.spec.ts",
+    "extension": [
+      "ts"
+    ],
+    "require": "ts-node/register"
   },
   "repository": "https://github.com/OADA/types",
   "author": "Alex Layton <alex@layton.in>",
@@ -17,10 +26,14 @@
     "typescript": "^3.8.3"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.11",
     "@types/mkdirp": "^1.0.0",
+    "@types/mocha": "^7.0.2",
     "@types/node": "^13.11.0",
+    "chai": "^4.2.0",
     "json-schema-to-typescript": "^8.2.0",
     "mkdirp": "^1.0.4",
+    "mocha": "^7.1.1",
     "ts-node": "^8.9.0"
   }
 }
