--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "TypeScript type definitions for OADA formats",
   "main": "index.ts",
   "scripts": {
-    "build": "ts-node compile.ts",
+    "build": "ts-node --files compile.ts",
     "prestart": "npm run build",
     "prepare": "npm run build",
     "pretest": "npm run build",
@@ -23,17 +23,21 @@
   "private": false,
   "dependencies": {
     "@oada/formats": "https://github.com/OADA/formats.git",
+    "ajv": "^6.12.2",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
+    "@apidevtools/json-schema-ref-parser": "^9.0.1",
     "@types/chai": "^4.2.11",
     "@types/mkdirp": "^1.0.0",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.11.0",
+    "ajv-pack": "^0.3.1",
     "chai": "^4.2.0",
     "json-schema-to-typescript": "^8.2.0",
     "mkdirp": "^1.0.4",
     "mocha": "^7.1.1",
+    "prettier-standard": "^16.3.0",
     "ts-node": "^8.9.0"
   }
 }
