--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "dependencies": {
     "@oada/formats": "https://github.com/OADA/formats.git#f433329",
     "ajv": "^6.12.2",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "ts-node": "^8.9.0"
   },
   "devDependencies": {
     "@apidevtools/json-schema-ref-parser": "^9.0.1",
@@ -37,7 +38,6 @@
     "json-schema-to-typescript": "^8.2.0",
     "mkdirp": "^1.0.4",
     "mocha": "^7.1.1",
-    "prettier-standard": "^16.3.0",
-    "ts-node": "^8.9.0"
+    "prettier-standard": "^16.3.0"
   }
 }
