--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "strict": true,
     "moduleResolution": "node",
     "module": "CommonJS",
+    "outDir": "./dist",
     "lib": ["ES2019"],
     "noUnusedLocals": true,
     "noUnusedParameters": true,
@@ -11,5 +12,13 @@
     "declaration": true,
     "declarationMap": true
   },
-  "exclude": ["lib", "test", "types"]
+  "exclude": [
+    "lib",
+    "test",
+    "types",
+    "dist",
+    "oada/as-harvested/yield-moisture-dataset/*",
+    "oada/tiled-maps/dry-yield-map/*",
+    "oada/tiled-maps/moisture-map/*"
+  ]
 }
