--- a/package.json
+++ b/package.json
@@ -2,12 +2,8 @@
   "name": "@oada/types",
   "version": "1.0.0",
   "description": "TypeScript type definitions for OADA formats",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/index.ts",
   "source": "index.ts",
-  "files": [
-    "dist/**/*"
-  ],
   "scripts": {
     "build": "ts-node --files compile.ts && tsc",
     "prestart": "npm run build",
