Add ajv-pack validate type declarations

--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "@oada/types",
   "version": "1.0.0",
   "description": "TypeScript type definitions for OADA formats",
-  "main": "dist/index.ts",
-  "source": "index.ts",
+  "main": "index.ts",
   "scripts": {
     "build": "ts-node --files compile.ts",
     "prestart": "npm run build",
