Revert "Add ajv-pack validate type declarations"
This reverts commit 89c8f619a96732a69c9518e20a42e323fe15dd9b.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "@oada/types",
   "version": "1.0.0",
   "description": "TypeScript type definitions for OADA formats",
-  "main": "index.ts",
+  "main": "dist/index.ts",
+  "source": "index.ts",
   "scripts": {
     "build": "ts-node --files compile.ts",
     "prestart": "npm run build",
