Revert "Remove tsc for testing"
This reverts commit d5f397e0a6c7c868b9632d18cfff5370fcd18a11.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.ts",
   "source": "index.ts",
   "scripts": {
-    "build": "ts-node --files compile.ts",
+    "build": "ts-node --files compile.ts && tsc",
     "prestart": "npm run build",
     "prepare": "npm run build",
     "pretest": "npm run build",
