--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "TypeScript type definitions for OADA formats",
   "main": "index.ts",
   "scripts": {
-    "build": "ts-node --files compile.ts",
+    "prebuild": "ts-node --files compile.ts",
+    "build": "tsc",
     "prestart": "npm run build",
     "prepare": "npm run build",
     "pretest": "npm run build",
@@ -32,9 +33,11 @@
     "@types/mkdirp": "^1.0.0",
     "@types/mocha": "^7.0.2",
     "@types/node": "^13.13.5",
+    "@types/prettier": "^2.0.0",
     "ajv-pack": "^0.3.1",
     "chai": "^4.2.0",
     "json-schema-to-typescript": "^9.0.1",
+    "jsonschema8": "^1.1.0",
     "mkdirp": "^1.0.4",
     "mocha": "^7.1.2",
     "prettier-standard": "^16.3.0",
