--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,12 @@
     "declaration": true,
     "declarationMap": true
   },
-  "exclude": ["lib", "test", "types"]
+  "exclude": [
+    "lib",
+    "test",
+    "types",
+    "oada/as-harvested/yield-moisture-dataset/*",
+    "oada/tiled-maps/dry-yield-map/*",
+    "oada/tiled-maps/moisture-map/*"
+  ]
 }
