--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "noUnusedParameters": true,
     "sourceMap": true,
     "declaration": true,
-    "declarationMap": true
+    "declarationMap": true,
+    "esModuleInterop": true
   },
   "exclude": [
     "lib",
